--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -15,6 +15,10 @@
     <body>
         {{ template "navigation.html" .}}
         <div class="container">
+            <div class="mb-3">
+                <label for="formFile" class="form-label">Cover</label>
+                <input class="form-control" type="file" id="formFile">
+            </div>
             <!-- <input type="button" onclick="setContent()" value="确定" /> -->
             <div id="vditor" style="margin-top:25px">
             </div>
