--- a/templates/info.html
+++ b/templates/info.html
@@ -37,38 +37,41 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <form class="row g-3" id="changepassword" userid="{{ .id }}">
-                                    <div class="mb-3">
-                                        <!-- <div id="emailHelp" class="form-text">为了您的账号安全，需要验证您的邮箱。验证码将通过邮件形式发送至：</div>
-                                        <label for="InputEmail" class="form-label"></label>
-                                        <input type="email" class="form-control" value="{{ .email }}" disabled aria-describedby="emailHelp"> -->
-                                        <div class="form-text">
-                                            为了您的账号安全，需要验证您的邮箱。验证码将通过邮件形式发送至：{{ .email }}
+                                <form class="g-3" id="changepassword" userid="{{ .id }}">
+                                    <div class="row">
+                                        <div class="mb-3">
+                                            <!-- <div id="emailHelp" class="form-text">为了您的账号安全，需要验证您的邮箱。验证码将通过邮件形式发送至：</div>
+                                            <label for="InputEmail" class="form-label"></label>
+                                            <input type="email" class="form-control" value="{{ .email }}" disabled aria-describedby="emailHelp"> -->
+                                            <div class="form-text">
+                                                为了您的账号安全，需要验证您的邮箱。验证码将通过邮件形式发送至：{{ .email }}
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <label for="emailvalidation" class="form-label visually-hidden"></label>
-                                        <input type="text" class="form-control" id="emailvalidation" placeholder="电子邮件验证码">
-                                    </div>
-                                    <div class="col-auto">
-                                        <button type="button" class="btn btn-info" id="verification">发送验证码</button>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="InputPassword" class="form-label visually-hidden">原密码</label>
-                                        <input type="password" class="form-control" id="InputPassword" placeholder="原密码">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="InputNewPassword" class="form-label visually-hidden">密码</label>
-                                        <input type="password" class="form-control" id="InputNewPassword" placeholder="新密码">
+                                    
+                                        <div class="col-auto">
+                                            <label for="emailvalidation" class="form-label visually-hidden"></label>
+                                            <input type="text" class="form-control" id="emailvalidation" placeholder="电子邮件验证码">
+                                        </div>
+                                        <div class="col-auto mb-3">
+                                            <button type="button" class="btn btn-info" id="verification">发送验证码</button>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="InputPassword" class="form-label visually-hidden">原密码</label>
+                                            <input type="password" class="form-control" id="InputPassword" placeholder="原密码">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="InputNewPassword" class="form-label visually-hidden">密码</label>
+                                            <input type="password" class="form-control" id="InputNewPassword" placeholder="新密码">
+                                        </div>
                                     </div>
                                     <!-- <div class="mb-3">
                                         <label for="Inputphonenumber" class="form-label">手机号</label>
                                         <input type="phonenumber" class="form-control" id="Inputphonenumber" value="{{ .phone }}">
                                     </div> -->
-
-
-                                    <div class="col-4">
-                                        <button type="submit" class="btn btn-primary">修改密码</button>
+                                    <div class="row">
+                                        <div class="col-3 ms-auto">
+                                            <button type="submit" class="btn btn-primary">修改密码</button>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
@@ -93,24 +96,30 @@
                             </div>
                             <div class="modal-body">
                                 <form id="userinfo" userid="{{ .id }}">
-                                    <div class="mb-3">
-                                        <label for="Inputnickname" class="form-label">昵称</label>
-                                        <input type="nickname" class="form-control" id="Inputnickname" value="{{ .nickname }}">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="InputEmail" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="InputEmail" value="{{ .email }}" aria-describedby="emailHelp">
-                                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="Inputphonenumber" class="form-label">手机号</label>
-                                        <input type="phonenumber" class="form-control" id="Inputphonenumber" value="{{ .phone }}">
+                                    <div class="row">
+                                        <div class="mb-3">
+                                            <label for="Inputnickname" class="form-label">昵称</label>
+                                            <input type="nickname" class="form-control" id="Inputnickname" value="{{ .nickname }}">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="InputEmail" class="form-label">Email</label>
+                                            <input type="email" class="form-control" id="InputEmail" value="{{ .email }}" aria-describedby="emailHelp">
+                                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="Inputphonenumber" class="form-label">手机号</label>
+                                            <input type="phonenumber" class="form-control" id="Inputphonenumber" value="{{ .phone }}">
+                                        </div>
                                     </div>
                                     <!-- <div class="mb-3 form-check">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
                                     </div> -->
-                                    <button type="submit" class="btn btn-primary">保存信息</button>
+                                    <div class="row">
+                                        <div class="col-3 ms-auto">
+                                            <button type="submit" class="btn btn-primary">保存信息</button>
+                                        </div>
+                                    </div>
                                     </form>
                             </div>
                             <!-- <div class="modal-footer">
