--- a/templates/multiplepic.html
+++ b/templates/multiplepic.html
@@ -8,28 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <link rel="stylesheet" href="/static/css/randompic.css"> -->
-
 </head>
 <body>
     {{ template "navigation.html" . }}
-    <div class="container-fluid">
+    <div class="container">
         <div class="row row-col-3">
-            <div class="col">
-                <img class="img-fluid" src="{{.url}}" alt="title">
-                <a href="{{ .url }}" type="button" id="testimg">Download
-                </a>
-            </div>
-            <!-- <div class="col-xl-3 col-lg-4 col-sm-6 grid-item grid-sizer cat-three cat-four cat-two">
-                <div class="top-courses-item mb-50" style="margin-bottom: 10px">
+            {{ range $index, $url := .urls }}
+            <div class="col-xl-3 col-lg-4 col-sm-6 grid-item grid-sizer cat-three cat-four cat-two">
+                <div class="top-courses-item mb-50">
                     <div class="top-courses-thumb">
-                        <a href="{{ .url }}">
-                            <img class="img-zoomable" src="{{ .url }}" style="cursor: zoom-in;">
+                        <a href="{{ $url }}">
+                            <img class="img-fluid" src="{{ $url }}" alt="title">
                         </a>
                     </div>
                 </div>
-            </div> -->
+            </div>
+            {{ end }}
         </div>
     </div>
-    <!-- <script src="/static/js/picture.js"></script> -->
 </body>
 </html>
