--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -22,7 +22,7 @@
                 <!-- <li class="nav-item"><button onclick="logout()">Log out</button></li> -->
                 <li class="nav-item"><a href="#" class="nav-link" role="button" id="logout">退出登录</a></li>
                 <li class="nav-item dropdown">
-                    <a href="" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">下拉菜单</a>
+                    <a href="" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">{{ .nickname }}</a>
                     <ul class="dropdown-menu">
                         <li><a href="/user/info" class="dropdown-item">个人信息</a></li>
                         <li><a href="#" class="dropdown-item">退出登录</a></li>
