--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HOME | sobbl</title>
+    <title>HOME | sobble</title>
     <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -12,17 +12,21 @@
     <body>
         {{ template "navigation.html" . }}
         <div class="container">
-            <div class="row">
-                {{ range $index, $article := .articles }}
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="{{ $article.Cover }}" alt="cover">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ $article.Title }}</h5>
-                        <p class="card-text">文章的部分内容{{ $article.Cover }}</p>
-                        <a href="/article/{{ $article.ID }}" class="btn btn-primary">详细</a>
+            <div class="row g-5">
+
+                    {{ range $index, $article := .articles }}
+                    <div class="card" style="width: 18rem;">
+                        {{ if $article.Cover }}
+                        <img class="card-img-top" src="{{ $article.Cover }}" alt="cover">
+                        {{ end }}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ $article.Title }}</h5>
+                            <p class="card-text">文章的部分内容</p>
+                            <a href="/article/{{ $article.ID }}" class="btn btn-primary">详细</a>
+                        </div>
                     </div>
-                </div>
-                {{ end }}
+                    {{ end }}
+
             </div>
 
         </div>
@@ -41,6 +45,5 @@
             </div>
         </header> -->
         <!-- Footer-->
-        <script src="/static/js/scripts.js"></script>
     </body>
 </html>
